# Veditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
src/: AssetManager.cpp  AssetManager.hpp  AudioUtil.cpp  AudioUtil.hpp  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.hpp  Cursor.cpp  Cursor.hpp  Document.cpp  Document.hpp  DocumentEditor.cpp  DocumentEditor.hpp  EditorApp.cpp  EditorApp.hpp  EditorViewer.cpp  EditorViewer.hpp  ImGuiApp.cpp  ImGuiApp.hpp  ImGuiEditorViewer.cpp  ImGuiEditorViewer.hpp  InputHandler.cpp  InputHandler.hpp  SDLAudioUtil.cpp  SDLAudioUtil.hpp  SDLWindow.cpp  SDLWindow.hpp  WhisperUtil.cpp  WhisperUtil.hpp  main.cpp
